# core

./: configure.ac
src/lib/: macros.h
src/lib-fs/: Makefile.am  fs-api-private.h  fs-api.c  fs-http.c  fs-s3.c
src/lib-storage/: Makefile.am  mail-storage-register.c  mail-storage-settings.c  mail-storage-settings.h
src/lib-storage/index/: Makefile.am
src/lib-storage/index/abox/: Makefile.am  abox-copy.c  abox-file.c  abox-file.h  abox-mail.c  abox-mail.h  abox-save.c  abox-save.h  abox-storage.c  abox-storage.h  abox-sync-rebuild.c  abox-sync.c  abox-sync.h
src/lib-storage/index/dbox-common/: dbox-attachment.c  dbox-file-fix.c  dbox-file.c  dbox-file.h  dbox-mail.c  dbox-save.c  dbox-storage.c  dbox-storage.h
src/lib-storage/index/dbox-multi/: Makefile.am  mdbox-deleted-storage.c  mdbox-file.c  mdbox-file.h  mdbox-map.c  mdbox-storage.c
src/lib-storage/index/dbox-single/: sdbox-copy.c  sdbox-file.c  sdbox-file.h  sdbox-mail.c  sdbox-save.c  sdbox-storage.c  sdbox-storage.h  sdbox-sync-rebuild.c  sdbox-sync.c
src/plugins/: Makefile.am
src/plugins/fs-s3/: Makefile.am  fs-s3.c
